# github-bot

./: .gitignore  Cargo.toml  README.md  TODO.md  Taskfile.dist.yaml  deny.toml  justfile  sonar-project.properties
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yaml  autofix.yaml  changelog.yaml  cross-build.yaml  dependency-review.yml  health.yaml  issues.yaml  licenses.yaml  lint.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
backpack/cli/: Cargo.toml
backpack/cli/src/: main.rs
backpack/cli/src/commands/: mod.rs  tests.rs
backpack/cli/src/commands/git/: mod.rs
backpack/cli/src/commands/hello/: mod.rs
backpack/cli/src/commands/maintain/: mod.rs
backpack/cli/src/commands/merge/: mod.rs
backpack/cli/src/commands/prune/: mod.rs
backpack/cli/src/commands/rerun/: mod.rs
backpack/cli/src/commands/wip/: mod.rs
backpack/lib/: Cargo.toml
backpack/lib/src/: cli.rs  lib.rs  log.rs  mod.rs
backpack/lib/src/cli/: mod.rs
backpack/lib/src/ghk/: app.rs  config.rs  error.rs  gh.rs  git.rs  mod.rs  util.rs
backpack/lib/src/ghk/commands/: branch.rs  clone.rs  completions.rs  config.rs  create.rs  diff.rs  fork.rs  history.rs  ignore.rs  init.rs  license.rs  login.rs  logout.rs  mod.rs  open.rs  pull.rs  push.rs  setup.rs  status.rs  undo.rs  user.rs
backpack/lib/src/git/: mod.rs  tests.rs
backpack/lib/src/github/: mod.rs  pr.rs  release.rs  tests.rs  workflow.rs  workflows.rs
backpack/lib/src/plugins/: color.rs  mod.rs  tests.rs
backpack/lib/src/utils/: mod.rs
backpack/lib/tests/: litmus.rs
xtask/: Cargo.toml
