[workspace]
#members = ["backpack/cli", "backpack/lib", "backpack/e2e", "xtask"]
members = ["backpack/cli", "backpack/lib", "xtask"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.44"
