[workspace]
members = ["backpack/cli", "backpack/lib", "xtask"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.44"
once_cell = "1.18.0"
tracing-subscriber = "0.3"
terminal-banner = "0.4.1"
git2 = { version = "0.20.3", features = ["vendored-libgit2", "vendored-openssl"] }

[profile.dev]
# Ensures full debug info is generated for kcov/llvm-cov mapping
debug = true
# Disabling incremental can help prevent "stale" coverage data
incremental = false

# Optional: You might also want this for 'cargo test' if you run it with --release
[profile.test]
debug = true
incremental = false
