[package]
name = "github-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GitHub automation bot"
repository = "https://github.com/yonasBSD/github-bot"
readme = "README.md"
keywords = ["github", "rust"]
categories = ["template"]

[dependencies]
github-bot-lib = { path = "../lib" }
reqwest.workspace = true
clap.workspace = true
anyhow.workspace = true
human-panic = "2.0.6"
url = "2.5.7"
tempfile = "3.24.0"
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dialoguer = "0.12.0"
serde.workspace = true

[[bin]]
name = "github-bot"
path = "src/main.rs"

[features]
coverage = []

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWS6/A1iiYtBjU101ofgB5ZBUq+erhj0pAF06delVbHPUiDee7PQvIML"
