[package]
name = "github-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GitHub automation bot"
repository = "https://github.com/yonasBSD/github-bot"
readme = "README.md"
keywords = ["github", "rust"]
categories = ["template"]

[dependencies]
github-bot-lib = { path = "../lib" }
reqwest.workspace = true
clap.workspace = true
anyhow.workspace = true
human-panic = "2.0.6"
colored = "3.0.0"
dialoguer = "0.12.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
terminal-banner = { version = "0.4.1", features = ["color"] }
console-subscriber = "0.5.0"
color-eyre = "0.6.5"
rootcause = "0.11.0"
rootcause-backtrace = "0.11.0"

[[bin]]
name = "github-bot"
path = "src/main.rs"

[features]
coverage = []

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWS6/A1iiYtBjU101ofgB5ZBUq+erhj0pAF06delVbHPUiDee7PQvIML"
