[package]
name = "github-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GitHub automation bot"
repository = "https://github.com/yonasBSD/github-bot"
readme = "README.md"
keywords = ["github", "rust"]
categories = ["template"]

[dependencies]
github-bot-lib = { path = "../lib" }
reqwest = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
human-panic = "2.0.6"
colored = "3.0.0"
dialoguer = "0.12.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
terminal-banner = { workspace = true }
console-subscriber = "0.5.0"
rootcause = "0.11.1"
rootcause-backtrace = "0.11.1"
tokio = { workspace = true }
env-rs = { git = "https://github.com/yonasBSD/env.rs", version = "0.1.0" }

[[bin]]
name = "github-bot"
path = "src/main.rs"

[features]
coverage = []

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWS6/A1iiYtBjU101ofgB5ZBUq+erhj0pAF06delVbHPUiDee7PQvIML"
