[package]
name = "github-bot-lib"
version = "0.1.0"
authors = ["test@example.com"]
edition = "2024"
license = "MIT"
description = "Library for github-bot"
repository = "https://github.com/yonasBSD/rust-ci-github-actions-workflow"
readme = "README.md"
keywords = ["template", "rust"]
categories = ["template"]

[[test]]
name = "litmus"
path = "tests/litmus.rs"
harness = false # Required for Litmus' custom runner

[features]
coverage = []

[dev-dependencies]
mockito = "1.7.1"
wasm-bindgen-test = "0.3.56"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2"
human-panic = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dependencies]
demonstrate = { git = "https://github.com/yonasBSD/demonstrate" }
litmus = "0.5.5"
pretty_assertions = "1.4.1"
clap.workspace = true
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
colored = "3.0.0"
url = "2.5.7"
tempfile = "3.24.0"
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
dirs = "6.0.0"
toml = "0.9.10"
tokio.workspace = true
futures = "0.3.31"
rhai = { version = "1.23.6", features = ["serde"] }
rhai-http = "0.7.0"
dialoguer = "0.11"
which = "6.0"
thiserror = "1.0"
libc = "0.2"
indicatif = "0.17"
clap_complete = "4.5.65"
strum = { version = "0.27.2", features = ["derive"] }
git2 = { version = "0.20.3", features = ["vendored-libgit2", "vendored-openssl"] }
chrono = "0.4.42"
